# vgi-charset

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-entrypoint.sh
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  run-integration.sh
crates/charset-wasm/: Cargo.toml
crates/charset-wasm/src/: lib.rs
crates/charset-worker/: Cargo.toml
crates/charset-worker/src/: arrow_io.rs  charset.rs  lib.rs  main.rs  meta.rs
crates/charset-worker/src/scalar/: decode.rs  detect.rs  encode.rs  mod.rs  version.rs
crates/charset-worker/src/table/: mod.rs  supported.rs
crates/charset-worker/tests/: transcode.rs
test/sql/: detect.test  transcode.test
wasm/: build.sh
