[workspace]
resolver = "2"
members = ["crates/charset-worker", "crates/charset-wasm"]
# charset-wasm only makes sense for wasm32-unknown-emscripten (it is a staticlib
# whose ring ops are supplied by emcc's --js-library), so keep it out of the
# default set: bare `cargo build` / `test` / `clippy` stay native-only and
# unchanged. Build it explicitly with `wasm/build.sh` or `-p charset-wasm`.
default-members = ["crates/charset-worker"]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.97"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-charset"

[workspace.dependencies]
# VGI Rust SDK (worker side), published on crates.io. 0.24 provides the wasm
# `vgi::wasm_worker!` macro used by charset-wasm; requires rustc 1.97 (see
# rust-version above). Base (feature-less) so each target opts in: the native
# build takes the SDK's real defaults (`sqlite` + `transport-http`), while the
# wasm build must NOT — tokio/mio/axum and bundled SQLite do not compile for
# wasm32, and the browser transport serves over a byte channel rather than HTTP.
vgi = { version = "0.24", default-features = false }
vgi-rpc = { version = "0.16", default-features = false, features = ["macros"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-schema = "59"

# Character-encoding detection + transcoding. Both are pure Rust, no native
# deps, and MSRV-friendly (build clean on Rust 1.86):
#   - chardetng (Apache-2.0/MIT, Mozilla): the encoding-detection heuristic
#     Firefox uses for legacy/unlabelled text.
#   - encoding_rs (Apache-2.0/MIT, Mozilla): the WHATWG Encoding Standard codec
#     library Firefox uses for decode/encode of every web-platform encoding.
chardetng = "1.0"
encoding_rs = "0.8"

[profile.release]
opt-level = 2
