[package]
name = "charset-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VGI worker bringing character-encoding detection and UTF-8 transcoding (mojibake repair) to DuckDB over Apache Arrow"

[[bin]]
name = "charset-worker"
path = "src/main.rs"

[dependencies]
vgi.workspace = true
vgi-rpc.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
chardetng.workspace = true
encoding_rs.workspace = true
log = "0.4"
env_logger = "0.11"
